test_programs/compile_failure/noirc_frontend_tests_traits_errors_if_constrained_trait_definition_has_unconstrained_impl/src/main.nr

    pub trait Foo {
        fn foo() -> Field;
    }

    impl Foo for Field {
        unconstrained fn foo() -> Field {
            42
        }
    }
    